--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    {{! Document Settings }}
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  {{! Document Settings }}
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />{{! Page Meta }}
+  <title>{{meta_title}}</title>
+  <meta name="description" content="{{meta_description}}" />
 
-    {{! Page Meta }}
-    <title>{{meta_title}}</title>
-    <meta name="description" content="{{meta_description}}" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-
-    {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />
-
-    {{! Ghost outputs important style and meta data with this tag }}
-    {{ghost_head}}
+  <link rel="shortcut icon" href="{{asset "favicon.ico"}}">{{! Styles'n'Scripts }}
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />{{! Ghost outputs important style and meta data with this tag }}
+  {{ghost_head}}
 </head>
-<body class="{{body_class}} nav-closed">
 
-    {{navigation}}
-
-    <div class="site-wrapper">
-
-        {{! Everything else gets inserted here }}
-        {{{body}}}
-
-        <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
-        </footer>
-
+<body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <div class="navbar-brand">
+          <a href="#"><img id="nav-logo" src="{{asset "images/hero_logo.png"}}"></a>
+        </div>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li> <a href="./#about">About</a></li>
+          <li> <a href="./#how-target">How?</a></li>
+          <li><a href="./#color-wall-target">Color Wall</a></li>
+          <li><a href="./#team-target">Team</a></li>
+          <li><a href="./#blog">News</a></li>
+          <li><a href="./#contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <div class="site-wrapper">
+
+    {{! Everything else gets inserted here }}
+    {{{body}}}
+
+      <footer class="site-footer clearfix">
+        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
+        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
+      </footer>
+
+  </div>
+
+  {{!-- jQuery needs to come before `{{ghost_foot}}
+  ` so that jQuery can be used in code injection --}} <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     {{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
 
-    <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
-    {{! The main JavaScript file for Casper }}
-    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+      <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
+      {{! The main JavaScript file for Casper }}
+      <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 
 </body>
+
 </html>
