--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -14,7 +14,8 @@
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">{{! Styles'n'Scripts }}
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />{{! Ghost outputs important style and meta data with this tag }}
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />
+  <link rel="stylesheet" type="text/css" href="{{asset "css/custom.css"}}" />
   {{ghost_head}}
 </head>
 
