--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -40,7 +40,7 @@
     </div>
   </nav>
 
-  <div class="site-wrapper">
+  <div class="">
 
     {{! Everything else gets inserted here }}
     {{{body}}}
