--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -40,12 +40,12 @@
     </div>
   </nav>
 
-  <div class="">
+  <div class="container-fluid">
 
     {{! Everything else gets inserted here }}
     {{{body}}}
 
-      <footer class="site-footer clearfix">
+      <footer class="site-footer clearfix inverse">
         <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
         <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
       </footer>
