--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -44,17 +44,15 @@
     {{! Everything else gets inserted here }}
     {{{body}}}
 
-      <div class="mastfoot">
-        <div class="inner">
-          <p>C<a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}, Proudly published with <a href="https://ghost.org">Ghost</a>.</p>
-        </div>
-      </div>
 
-      <footer class="site-footer clearfix inverse">
-        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
-      </footer>
 
+
+  </div>
+
+  <div class="mastfoot">
+    <div class="inner">
+      <p><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}, Proudly published with <a href="https://ghost.org">Ghost</a>.</p>
+    </div>
   </div>
 
   {{!-- jQuery needs to come before `{{ghost_foot}}
