--- a/content/themes/monet/assets/css/custom.css
+++ b/content/themes/monet/assets/css/custom.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   padding-top: 80px;
+  padding-bottom: 60px;
 }
 
 #nav-logo {
@@ -242,6 +243,9 @@ div.colorsplotch {
 
   .blog-footer {
     padding: 40px 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     color: #999;
     text-align: center;
     background-color: #f9f9f9;
