--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -48,7 +48,7 @@
 
 
   </div>
-  <footer class="footer inverse">
+  <footer class="blog-footer inverse">
         <p><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}, Proudly published with <a href="https://ghost.org">Ghost</a>.</p>
         <p>
           <a href="#">Back to top</a>
