--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />
+  <link rel="stylesheet" type="text/css" href="{{asset "css/collapse.css"}}" />
   <link rel="stylesheet" type="text/css" href="{{asset "css/custom.css"}}" /> {{ghost_head}}
 </head>
 
@@ -22,6 +23,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
+        <div type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" class="button navbar-toggle collapsed"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></div>
         <div class="navbar-brand">
           <a href="#"><img id="nav-logo" src="{{asset "images/hero_logo.png"}}"></a>
         </div>
@@ -58,6 +60,7 @@
 
   {{!-- jQuery needs to come before `{{ghost_foot}}
   ` so that jQuery can be used in code injection --}} <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     {{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
 
