--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -30,12 +30,12 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li> <a href="./#about">About</a></li>
-          <li> <a href="./#how-target">How?</a></li>
-          <li><a href="./#color-wall-target">Color Wall</a></li>
-          <li><a href="./#team-target">Team</a></li>
-          <li><a href="./#blog">News</a></li>
-          <li><a href="./#contact">Contact</a></li>
+          <li> <a href="http://www.projectmo.net/#about">About</a></li>
+          <li> <a href="http://www.projectmo.net/#how-target">How?</a></li>
+          <li><a href="http://www.projectmo.net/#color-wall-target">Color Wall</a></li>
+          <li><a href="http://www.projectmo.net/#team-target">Team</a></li>
+          <li><a href="http://www.projectmo.net/#blog-target">Blog</a></li>
+          <li><a href="http://www.projectmo.net/#contact-target">Social</a></li>
         </ul>
       </div>
     </div>
