--- a/content/themes/monet/default.hbs
+++ b/content/themes/monet/default.hbs
@@ -34,8 +34,8 @@
           <li> <a href="http://www.projectmo.net/#how-target">How?</a></li>
           <li><a href="http://www.projectmo.net/#color-wall-target">Color Wall</a></li>
           <li><a href="http://www.projectmo.net/#team-target">Team</a></li>
-          <li><a href="http://www.projectmo.net/#blog-target">Blog</a></li>
-          <li><a href="http://www.projectmo.net/#contact-target">Social</a></li>
+          <li><a href="http://blog.projectmo.net">Blog</a></li>
+          <li><a href="http://www.projectmo.net/#social-target">Social</a></li>
         </ul>
       </div>
     </div>
