--- a/content/themes/monet/page.hbs
+++ b/content/themes/monet/page.hbs
@@ -6,26 +6,33 @@
 {{! Everything inside the #post tags pulls data from the page }}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
-</header>
 
-<main class="content" role="main">
-    <article class="{{post_class}}">
 
-        <header class="post-header">
-            <h1 class="post-title">{{title}}</h1>
-        </header>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="post-hf">
+        <h1 class="post-title">{{title}}</h1>
+      </div>
+      <div class="post-content">
+        {{content}}
+      </div>
+      <div class="post-hf">
+        <p>Posted by
+          {{#author}}<a href="{{url}}">{{name}}</a>{{/author}} on {{date format="DD MMMM YYYY"}}</p>
+        <p>Share this post
+          <a class="icon-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+            <span class=""><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter </span>
+          </a>
+          or
+          <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+            <span class=""> <i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</span>
+          </a>
+        </p>
+      </div>
 
-        <section class="post-content">
-            {{content}}
-        </section>
 
-    </article>
-</main>
+    </div>
+  </div>
+
 {{/post}}
