--- a/content/themes/monet/assets/css/custom.css
+++ b/content/themes/monet/assets/css/custom.css
@@ -4,372 +4,348 @@ body {
   font-size: 18px;
   line-height: 30px;
 }
-
 #nav-logo {
   height: 100px;
   position: absolute;
-  top: 3px; }
-
+  top: 3px;
+}
 .navbar-brand {
   min-height: 80px;
-  min-width: 300px; }
-
+  min-width: 300px;
+}
 .navbar-default {
   background-color: #ff9600;
-  border-color: rgba(255, 250, 100, 0.5); }
-
+  border-color: rgba(255, 250, 100, 0.5);
+}
 .navbar-default .navbar-nav > li > a {
   font-size: 20px;
   line-height: 20px;
-  color: #fff5d5; }
-
+  color: #fff5d5;
+}
 .navbar-nav > li > a {
   padding-top: 53px;
-  padding-bottom: 0; }
-
+  padding-bottom: 0;
+}
 .content {
   margin-top: 40px;
   margin-bottom: 40px;
-  font-size: 30px; }
-
+  font-size: 30px;
+}
 img.header {
   width: 50%;
   margin-left: 25%;
-  margin-right: 25%; }
-
+  margin-right: 25%;
+}
 .hero p {
-  font-weight: bold; }
-
+  font-weight: bold;
+}
 .hero img {
-  width: 100%; }
-
+  width: 100%;
+}
 .circle-up {
-  border-radius: 50%; }
-
+  border-radius: 50%;
+}
 h1 {
-  font-size: 60px; }
-
+  font-size: 60px;
+}
 div.colorbit {
-  line-height: 2000px; }
-
+  line-height: 2000px;
+}
 span.colorbit {
   display: inline-block;
   width: 0.1%;
   height: 100%;
-  -webkit-filter: blur(1px); }
-
+  -webkit-filter: blur(1px);
+}
 div.colorsplotch {
   position: absolute;
   border-radius: 20%;
-  -webkit-filter: blur(3px); }
-
+  -webkit-filter: blur(3px);
+}
 #color-wall {
   background-image: url("../images/colorwall-bg.png");
   background-size: 150%;
-  background-repeat: no-repeat; }
-
+  background-repeat: no-repeat;
+}
 #color-wall p {
-  text-shadow: white 0 0 15px; }
-
+  text-shadow: white 0 0 15px;
+}
 .colorwall {
   background-color: rgba(255, 255, 255, 0.5);
-  padding: 20px; }
-
+  padding: 20px;
+}
 .colorwall img {
-  margin-bottom: 30px; }
-
+  margin-bottom: 30px;
+}
 [id*="-target"] {
   position: relative;
-  top: -80px; }
-
+  top: -80px;
+}
 .btn {
-  border-radius: 0; }
-
+  border-radius: 0;
+}
 #team h1, .image {
-  padding-bottom: 30px; }
-
+  padding-bottom: 30px;
+}
 #team p {
-  font-size: 20px; }
-
+  font-size: 20px;
+}
 .color-bg {
-  margin: 0 -20px; }
+  margin: 0 -20px;
+}
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+  margin-top: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  color: #333;
+}
 
-
-  h1, .h1,
-  h2, .h2,
-  h3, .h3,
-  h4, .h4,
-  h5, .h5,
-  h6, .h6 {
-    margin-top: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    color: #333;
-  }
-
-
-  /*
+/*
    * Override Bootstrap's default container.
    */
 
-  @media (min-width: 1200px) {
-    .container {
-      width: 970px;
-    }
+@media (min-width: 1200px) {
+  .container {
+    width: 970px;
   }
+}
 
-
-  /*
+/*
    * Masthead for nav
    */
 
-  .blog-masthead {
-    background-color: #428bca;
-    -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-            box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-  }
+.blog-masthead {
+  background-color: #428bca;
+  -webkit-box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
+  box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
+}
 
-  /* Nav links */
-  .blog-nav-item {
-    position: relative;
-    display: inline-block;
-    padding: 10px;
-    font-weight: 500;
-    color: #cdddeb;
-  }
-  .blog-nav-item:hover,
-  .blog-nav-item:focus {
-    color: #fff;
-    text-decoration: none;
-  }
+/* Nav links */
 
-  /* Active state gets a caret at the bottom */
-  .blog-nav .active {
-    color: #fff;
-  }
-  .blog-nav .active:after {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 0;
-    height: 0;
-    margin-left: -5px;
-    vertical-align: middle;
-    content: " ";
-    border-right: 5px solid transparent;
-    border-bottom: 5px solid;
-    border-left: 5px solid transparent;
-  }
+.blog-nav-item {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  font-weight: 500;
+  color: #cdddeb;
+}
+.blog-nav-item:hover, .blog-nav-item:focus {
+  color: #fff;
+  text-decoration: none;
+}
 
+/* Active state gets a caret at the bottom */
 
-  /*
+.blog-nav .active {
+  color: #fff;
+}
+.blog-nav .active:after {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin-left: -5px;
+  vertical-align: middle;
+  content: " ";
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid;
+  border-left: 5px solid transparent;
+}
+
+/*
    * Blog name and description
    */
 
-  .blog-header {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .blog-title {
-    margin-top: 30px;
-    margin-bottom: 0;
-    font-size: 60px;
-    font-weight: normal;
-  }
-  .blog-description {
-    font-size: 20px;
-    color: #999;
-  }
+.blog-header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.blog-title {
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-size: 60px;
+  font-weight: normal;
+}
+.blog-description {
+  font-size: 20px;
+  color: #999;
+}
 
-
-  /*
+/*
    * Main column and sidebar layout
    */
 
-  .blog-main {
-    font-size: 18px;
-    line-height: 1.5;
-  }
+.blog-main {
+  font-size: 18px;
+  line-height: 1.5;
+}
 
-  /* Sidebar modules for boxing content */
-  .sidebar-module {
-    padding: 15px;
-    margin: 0 -15px 15px;
-  }
-  .sidebar-module-inset {
-    padding: 15px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-  }
-  .sidebar-module-inset p:last-child,
-  .sidebar-module-inset ul:last-child,
-  .sidebar-module-inset ol:last-child {
-    margin-bottom: 0;
-  }
+/* Sidebar modules for boxing content */
 
+.sidebar-module {
+  padding: 15px;
+  margin: 0 -15px 15px;
+}
+.sidebar-module-inset {
+  padding: 15px;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+.sidebar-module-inset p:last-child, .sidebar-module-inset ul:last-child, .sidebar-module-inset ol:last-child {
+  margin-bottom: 0;
+}
 
-  /* Pagination */
-  .pager {
-    margin-bottom: 60px;
-    text-align: left;
-  }
-  .pager > li > a {
-    width: 140px;
-    padding: 10px 20px;
-    text-align: center;
-    border-radius: 30px;
-  }
+/* Pagination */
 
+.pager {
+  margin-bottom: 60px;
+  text-align: left;
+}
+.pager > li > a {
+  width: 140px;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 30px;
+}
 
-  /*
+/*
    * Blog posts
    */
 
-  .blog-post {
-    margin-bottom: 60px;
-  }
-  .blog-post-title {
-    margin-bottom: 5px;
-    font-size: 40px;
-  }
-  .blog-post-meta {
-    margin-bottom: 20px;
-    color: #999;
-  }
+.blog-post {
+  margin-bottom: 60px;
+}
+.blog-post-title {
+  margin-bottom: 5px;
+  font-size: 40px;
+}
+.blog-post-meta {
+  margin-bottom: 20px;
+  color: #999;
+}
 
-
-  /*
+/*
    * Footer
    */
 
-  .blog-footer {
-    padding: 40px 0;
-    color: #999;
-    text-align: center;
-    background-color: #f9f9f9;
-  }
-  .blog-footer p:last-child {
-    margin-bottom: 0;
-  }
-
-  [class*="-content"] {
-    min-height: 400px;
-    position: relative;
-  }
-
-  [class*="-content"] div {
-    padding: 20px;
-  }
-
-  .inner-content {
-    position: absolute;
-    bottom:0;
-    min-height: 0;
-    padding: 0;
-    text-shadow: #fff5d5 1px 0 2px;
-  }
-
-  .main-content {
-    font-size: 22px;
-  }
-
-  .page-nav {
-    padding: 0 20px;
-    background-color: #555;
-    color: #fff5d5;
-  }
-
-  .bgify{
-    background-size: 100%;
-  }
-
-  .bg-overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    background-color: rgba(255,255,255,.6);
-  }
-
-  .invert{
-    color: #fff5d5;
-    text-shadow: #333 1px 0 2px;
-  }
-
-  .invert a {
-    color: #FFB54C;
-  }
-
-  .light-orange {
-    background-color: rgba(255, 150, 0, 0.5); }
-
-  .med-orange {
-    background-color: rgba(255, 150, 0, 0.75); }
-
-  .extralight-orange {
-    background-color: rgba(255, 150, 0, 0.1); }
-
-  .inverse, .inverse h1, .inverse h2, .inverse h3,.inverse h4,.inverse h5,.inverse h6 {
-    background-color: #333;
-    color: #fff5d5;
-  }
-
-  .post-hf {
-    padding: 20px 20px 10px 20px;
-    background-color: #555;
-    color: #fff5d5;
-  }
-
-  .post-hf h1 {
-    color: #fff5d5;
-  }
-
-  .post-hf a {
-    color: #FFB54C
-  }
-
-  .post-content {
-    padding: 20px;
-  }
-
-  .post-content img {
-    padding: 40px 0;
-    display: block;
-    margin: 0 auto;
-  }
-
-  .post-content p {
-    margin-top: 20px;
-  }
-
-  .post-content h1,h2,h3,h4,h5,h6 {
-    color: #333;
-    margin-top: 30px;
-  }
-
+.blog-footer {
+  padding: 40px 0;
+  color: #999;
+  text-align: center;
+  background-color: #f9f9f9;
+}
+.blog-footer p:last-child {
+  margin-bottom: 0;
+}
+[class*="-content"] {
+  min-height: 400px;
+  position: relative;
+}
+[class*="-content"] div {
+  padding: 20px;
+}
+.inner-content {
+  position: absolute;
+  bottom: 0;
+  min-height: 0;
+  padding: 0;
+  text-shadow: #fff5d5 1px 0 2px;
+}
+.main-content {
+  font-size: 22px;
+}
+.page-nav {
+  padding: 0 20px;
+  background-color: #555;
+  color: #fff5d5;
+}
+.bgify {
+  background-size: 100%;
+}
+.bg-overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  background-color: rgba(255, 255, 255, .6);
+}
+.bg1 {
+  background-color: rgba(255, 194, 0, 0.6);
+}
+.bg2 {
+  background-color: rgba(103, 159, 210, 0.6);
+}
+.bg3 {
+  background-color: rgba(31, 26, 178, 0.6);
+}
+.bg4 {
+  background-color: rgba(255, 221, 115, 0.6);
+}
+.invert {
+  color: #fff5d5;
+  text-shadow: #333 1px 0 2px;
+}
+.invert a {
+  color: #FFB54C;
+}
+.light-orange {
+  background-color: rgba(255, 150, 0, 0.5);
+}
+.med-orange {
+  background-color: rgba(255, 150, 0, 0.75);
+}
+.extralight-orange {
+  background-color: rgba(255, 150, 0, 0.1);
+}
+.inverse, .inverse h1, .inverse h2, .inverse h3, .inverse h4, .inverse h5, .inverse h6 {
+  background-color: #333;
+  color: #fff5d5;
+}
+.post-hf {
+  padding: 20px 20px 10px 20px;
+  background-color: #555;
+  color: #fff5d5;
+}
+.post-hf h1 {
+  color: #fff5d5;
+}
+.post-hf a {
+  color: #FFB54C
+}
+.post-content {
+  padding: 20px;
+}
+.post-content img {
+  padding: 40px 0;
+  display: block;
+  margin: 0 auto;
+}
+.post-content p {
+  margin-top: 20px;
+}
+.post-content h1, h2, h3, h4, h5, h6 {
+  color: #333;
+  margin-top: 30px;
+}
 .post-meta .author-thumb {
   height: 80px;
   border-radius: 50%;
 }
-
 .post-meta span {
   display: inline-block;
 }
-
 .post-meta .auth {
   position: relative;
   top: 15px;
   padding-left: 10px;
 }
-
 .author span {
   display: inline-block;
 }
-
 .author .image {
   padding: 20px;
 }
-
 .author .author-thumb {
   height: 210px;
   border-style: solid;
@@ -377,13 +353,11 @@ div.colorsplotch {
   border-color: rgba(255, 245, 213, 0.4);
   border-width: 1px;
 }
-
 .author .auth {
   position: relative;
   top: 58px;
   padding-left: 20px;
 }
-
 .author .auth span {
   margin-right: 30px;
 }
