--- a/content/themes/monet/partials/loop.hbs
+++ b/content/themes/monet/partials/loop.hbs
@@ -7,7 +7,7 @@
   {{#foreach posts}}
 
       <div class="col-md-12 bgify" style="background-image: url({{image}});">
-        <div class="bg-overlay bg{{index}}"></div>
+        <div class="bg-overlay bg{{@index}}"></div>
         <div class="main-content">
           <div class="inner-content">
             <h1 class="post-title"><a href="{{url}}">{{{title}}}</a></h1>
